--- a/app/src/main/res/menu/menu_edit_dialog.xml
+++ b/app/src/main/res/menu/menu_edit_dialog.xml
@@ -2,13 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:title="Save"
+        android:title="Delete"
         android:id="@+id/menu_delete"
         app:showAsAction="always"
         android:icon="@drawable/ic_baseline_delete_24"/>
 
     <item
-    android:title="Save"
+    android:title="Edit"
     android:id="@+id/menu_update"
     app:showAsAction="always"
     android:icon="@drawable/ic_baseline_edit_24"/>
