--- a/app/src/main/res/layout/fragment_match_dialog.xml
+++ b/app/src/main/res/layout/fragment_match_dialog.xml
@@ -44,27 +44,75 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="30dp"
         >
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_margin="5dp"
             android:textSize="20dp"
-            android:text="Player 1 Win %: "
+            android:text="Player 1 Elo: "
             />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textAlignment="viewEnd"
+            android:textAlignment="center"
             android:layout_margin="5dp"
             android:textSize="20dp"
-            android:id="@+id/txtP1Percent"
-            android:text="0%"
+            android:id="@+id/txtP1Elo"
+            android:text="0"
             />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:textSize="20dp"
+            android:text="Player 2 Elo: "
+            />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:layout_margin="5dp"
+            android:textSize="20dp"
+            android:id="@+id/txtP2Elo"
+            android:text="0"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="100dp"
+        >
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_margin="5dp"
+                    android:textSize="20dp"
+                    android:text="Player 1 Win %: "
+                    />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textAlignment="viewEnd"
+                    android:layout_margin="5dp"
+                    android:textSize="20dp"
+                    android:id="@+id/txtP1Percent"
+                    android:text="0%"
+                    />
     </LinearLayout>
 
     <LinearLayout
