--- a/app/src/main/res/layout/fragment_match_dialog.xml
+++ b/app/src/main/res/layout/fragment_match_dialog.xml
@@ -40,6 +40,14 @@
         android:layout_margin="10dp"
         />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#FF0000"
+        android:textAlignment="center"
+        android:id="@+id/txtErrorMessage"
+        />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
